Optimize Docker image size and integrate GCN model loading - Reduce image size from 5.5GB to ~3GB - Add torch dependency for GCN model - Include GCNModel class and model loading logic - Optimize .dockerignore to exclude large files - Use CPU-only PyTorch to minimize size

--- a/deployment/.dockerignore
+++ b/deployment/.dockerignore
@@ -15,10 +15,58 @@ venv/
 *.swo
 .DS_Store
 Thumbs.db
+
+# Exclude all markdown documentation
+*.md
+DEPLOYMENT_OPTIONS.md
+DEPLOYMENT_SIZE.md
+MODEL_DEPLOYMENT_STRATEGIES.md
+LOCAL_RUN_INSTRUCTIONS.md
+QUICK_START.md
+UPDATE_MODELS.md
+RESTART_INSTRUCTIONS.md
 README.md
 ARCHITECTURE.md
 CLOUD_DEPLOYMENT_GUIDE.md
 
-# Keep all data and models for deployment
-# Only exclude non-essential files above
+# Exclude large data files - keep models
+# Large JSON files
+data/dataset_triples.json
+data/unified_knowledge_graph.json
+processed/dataset_triples.json
+processed/unified_knowledge_graph.json
+processed/*.csv
+processed/complete_*.json
+processed/literature_analysis.json
+processed/dataset_*.json
+processed/data_cleaning_report.json
+processed/graph_metrics.json
+processed/graph_embedding_results.json
+processed/optimized_graph_embedding_results.json
+processed/unified_knowledge_graph_*.json
+processed/trained_models/complete_literature_triples.json
+processed/trained_models/dataset_summary.json
+
+# Exclude other model files (keep best_model)
+models/complex_model.pth
+models/distmult_model.pth
+models/graphsage_model.pth
+models/transe_model.pth
+models/gcn_model.pth
+
+# Exclude checkpoint directories
+quick_fine_tuned_fast/checkpoint-*/
+quick_fine_tuned_fast/logs/
+
+# Exclude other directories
+images/*
+.railway/
+
+# Exclude deployment scripts not needed in container
+DEPLOY.bat
+download_models.py
+railway.json
+
+# Keep only essential app code
+!.gitignore
 
