--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -3,11 +3,10 @@ flask-cors==6.0.1
 pandas==2.0.3
 numpy==1.24.3
 scikit-learn==1.3.0
-sentence-transformers==2.2.2
-torch==2.0.1
-ortools==9.7.2996
 google-generativeai==0.3.2
 gunicorn==21.2.0
 python-dotenv==1.0.0
-scipy==1.10.1
 reportlab==4.0.4
+transformers==4.35.0
+safetensors==0.4.1
+torch==2.0.1
