Fix path resolution issues in Docker deployment - Convert relative paths to absolute paths - Fix .dockerignore to include required knowledge graph files - Update .gitignore to exclude large quick_fine_tuned_fast model directory

--- a/deployment/.dockerignore
+++ b/deployment/.dockerignore
@@ -43,7 +43,8 @@ processed/data_cleaning_report.json
 processed/graph_metrics.json
 processed/graph_embedding_results.json
 processed/optimized_graph_embedding_results.json
-processed/unified_knowledge_graph_*.json
+processed/unified_knowledge_graph_analysis.json
+processed/unified_knowledge_graph_schema.json
 processed/trained_models/complete_literature_triples.json
 processed/trained_models/dataset_summary.json
 
