--- a/deployment/Procfile
+++ b/deployment/Procfile
@@ -1,2 +1,2 @@
-web: gunicorn app.main:app --bind 0.0.0.0:$PORT
+web: gunicorn app.main:app --bind 0.0.0.0:$PORT --workers 1 --threads 4 --timeout 180
 
